--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2021"
 
 [dependencies]
 git2 = { git = "https://github.com/rust-lang/git2-rs.git", tag = "0.16.1" }
+sha256 = { git = "https://github.com/baoyachi/sha256-rs.git", tag = "1.1.1" }
+uuid = { git = "https://github.com/uuid-rs/uuid.git", tag = "1.3.0", features = [ "v4", "fast-rng" ] }
+
+[dev-dependencies]
+test-case = { git = "https://github.com/frondeus/test-case.git", tag = "v2.2.2" }
+
