--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,11 @@ git2 = { git = "https://github.com/rust-lang/git2-rs.git", tag = "0.16.1" }
 sha256 = { git = "https://github.com/baoyachi/sha256-rs.git", tag = "1.1.1" }
 uuid = { git = "https://github.com/uuid-rs/uuid.git", tag = "1.3.0", features = [ "v4", "fast-rng" ] }
 tokio = { git = "https://github.com/tokio-rs/tokio.git", tag = "tokio-1.25.0", features = [ "full" ] }
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = { git = "https://github.com/dtolnay/serde-yaml.git", tag = "0.9.19" }
+
+[patch.crates-io]
+serde = { git = "https://github.com/serde-rs/serde.git", tag = "v1.0.152" }
 
 [dev-dependencies]
 test-case = { git = "https://github.com/frondeus/test-case.git", tag = "v2.2.2" }
-
