--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ uuid = { git = "https://github.com/uuid-rs/uuid.git", tag = "1.3.0", features = 
 tokio = { git = "https://github.com/tokio-rs/tokio.git", tag = "tokio-1.25.0", features = [ "full" ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = { git = "https://github.com/dtolnay/serde-yaml.git", tag = "0.9.19" }
+rouille = "3.6.1"
 
 [patch.crates-io]
 serde = { git = "https://github.com/serde-rs/serde.git", tag = "v1.0.152" }
+rouille = { git = "https://github.com/tomaka/rouille.git", tag = "v3.6.1" }
 
 [dev-dependencies]
 test-case = { git = "https://github.com/frondeus/test-case.git", tag = "v2.2.2" }
