--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ rouille = "3.6.1"
 octocrab = "0.18.1"
 async-trait = "0.1.66"
 gitlab = "0.1506.0"
+refinery = { version = "0.8.7", features = [ "tokio-postgres" ] }
+tokio-postgres = "0.7.7"
 
 [patch.crates-io]
 serde = { git = "https://github.com/serde-rs/serde.git", tag = "v1.0.152" }
@@ -24,6 +26,8 @@ octocrab = { git = "https://github.com/sebgrz/octocrab.git", branch = "master" }
 async-trait = { git = "https://github.com/dtolnay/async-trait.git", tag = "0.1.66" }
 tokio = { git = "https://github.com/tokio-rs/tokio.git", tag = "tokio-1.26.0" }
 gitlab = { git = "https://gitlab.kitware.com/utils/rust-gitlab.git", tag = "v0.1506.0" }
+refinery = { git = "https://github.com/rust-db/refinery.git", tag = "0.8.7" }
+tokio-postgres = { git = "https://github.com/sfackler/rust-postgres.git", tag = "tokio-postgres-v0.7.7" }
 
 [dev-dependencies]
 test-case = { git = "https://github.com/frondeus/test-case.git", tag = "v2.2.2" }
